# Interest

./: .clang-format  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: macos.yml  osx.yml  ubuntu.yml
cmake/: InterestConfig.cmake
include/: Beautifiers.hpp  Container.hpp  Error.hpp  Ini.hpp  KV.hpp  Options.hpp  Section.hpp  Settings.hpp  Utils.hpp
include/Interest/: Container.hpp  Ini.hpp  KV.hpp  Settings.hpp  Utils.hpp
src/: Beautifiers.cpp  Container.cpp  Ini.cpp  KV.cpp  Section.cpp  Utils.cpp
test/: .clang-format  Beautifiers_test.cpp  CMakeLists.txt  Ini_test.cpp  KV_test.cpp  Section_KV_test.cpp  Section_Section_test.cpp  Section_functions_test.cpp  Section_test.cpp  Utils_test.cpp  test_stream.ini  unit-Ini.cpp  unit-KV.cpp  unit-Section.cpp  unit-Utils.cpp  unit.cpp
test/Ini/: CommonTest.cpp  common.cpp  parceBrackets.cpp
test/Section/: KV.cpp  Section.cpp  beautifyPrefix.cpp  beautifySuffix.cpp  uncommentLine.cpp
test/cmake/: InstallationTest.cmake
test/example/: CMakeLists.txt  main.cpp
test/ini/: test_last_option.ini  test_last_section.ini  test_missing_first.ini  test_standard.ini  test_unite_sections.ini  test_wrong_line.ini
tests/: Section_test.cpp  Utils_test.cpp
tests/ini/: test_empty_section.ini  test_empty_value.ini
